# episode-auto-namer

./: Doxyfile  README.md  epNamer  requirements.txt  setup.cfg  tox.ini  tvdb_get
src/episode_auto_namer_scraper/: __init__.py
src/episode_auto_namer_scraper/common/: Database.py  __init__.py  database.py  schema.py
src/episode_auto_namer_scraper/episode_renamer/: __init__.py  ep_renamer.py
src/episode_auto_namer_scraper/tvdb_local/: __init__.py  tvdb_get.py
tests/: __init__.py  test_example.py
