[metadata]
name = episode_auto_renamer_scraper
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.5
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    rene = episode_auto_namer_scraper.episode_renamer:main
    retrieve = episode_auto_namer_scraper.tvdb_local:main

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
